hphp/hack/test/typecheck/references/strict_foreach_reference2.php.exp
File "strict_foreach_reference2.php", line 4, characters 26-28:
Cannot take references to array elements. (Typing[4225])
